@@ -43,10 +43,8 @@ testTortureExecute (void)
 {
 #ifndef __SDCC_gbz80
 #ifndef __SDCC_mcs51
-#ifndef __SDCC_stm8
     foo();
     return;
-#endif
 #endif
 #endif
 }
